1. 地图初始化完毕。 2. 添加地图放大缩小功能。

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+		sans-serif;
+		font-weight: bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +11,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.greyCircleBorder {
+	border: 1px solid #C0C0C0;
+	border-radius: 10px;
+}
+
+.childMT10 > div {
+	margin-top: 10px;
 }
