--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,8 @@ body {
 		sans-serif;
 		font-weight: bold;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	-moz-osx-font-smoothing: grayscale;
+	touch-action: none;
 }
 
 code {
@@ -20,4 +21,20 @@ code {
 
 .childMT10 > div {
 	margin-top: 10px;
+}
+
+.my-drawer {
+	position: relative;
+	margin-left: -10px;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+.my-drawer .am-drawer-sidebar {
+  background-color: #fff;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+.my-drawer .am-drawer-sidebar .am-list {
+  width: 100px;
+  padding: 0;
 }
