--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@ body {
 		sans-serif;
 		font-weight: bold;
   -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
 	-moz-osx-font-smoothing: grayscale;
 	touch-action: none;
 }
