--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,12 +30,19 @@ code {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
+
 .my-drawer .am-drawer-sidebar {
   background-color: #fff;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
+
 .my-drawer .am-drawer-sidebar .am-list {
   width: 100px;
   padding: 0;
+}
+
+.am-popover-item-container span {
+  margin-left: auto;
+  margin-right: auto;
 }
